Cleaned up the file structure & updated README.md to be more contextual

--- a/html.html
+++ b/html.html
@@ -207,10 +207,10 @@
       </div>
     </div>
     <div class="toolbar">
-      <img src="./save-icon.png" id="save-button" alt="" onclick="save()" />
-      <img src="./undo-icon.png" id="undo-button" alt="" />
-      <img src="./redo-icon.png" id="redo-button" alt="" />
-      <img src="./paint-icon.png" id="paint-button" alt="" />
+      <img src="./src/save-icon.png" id="save-button" alt="" onclick="save()" />
+      <img src="./src/undo-icon.png" id="undo-button" alt="" />
+      <img src="./src/redo-icon.png" id="redo-button" alt="" />
+      <img src="./src/paint-icon.png" id="paint-button" alt="" />
     </div>
     <script src="./js.js"></script>
   </body>
