--- a/html.html
+++ b/html.html
@@ -12,206 +12,152 @@
   <body>
     <div class="main">
       <div class="container-body"></div>
-      <div class="container-tools border-l-4 border-green-400 pl-4 shadow-lg rounded-lg">
-        <input type="file" id="uploader" />
-        <div class="flex flex-col gap-2">
-          <div class="flex justify-between gap-2">
-            <button onclick="sivenje()" id="sivenje" class="px-6 py-3 text-black font-semibold text-md rounded-md shadow-md transition-transform transform hover:scale-105" style="background-color: springgreen;">Sivenje</button>
-            <button onclick="thresholding()" id="thresholding" class="px-6 py-3 text-black font-semibold text-md rounded-md shadow-md transition-transform transform hover:scale-105" style="background-color: springgreen;">Thresholding</button>
-          </div>
-          <div class="flex justify-between gap-2">
-            <button onclick="boxBlur()" id="box-blur" class="px-6 py-3 text-black font-semibold text-md rounded-md shadow-md transition-transform transform hover:scale-105" style="background-color: springgreen;">Box blur</button>
-            <button onclick="gaussianBlur()" id="gaussian-blur" class="px-6 py-3 text-black font-semibold text-md rounded-md shadow-md transition-transform transform hover:scale-105" style="background-color: springgreen;">Gaussian blur</button>
-          </div>
-          <div class="flex justify-between gap-2">
-            <button onclick="unsharpeningMask()" id="unsharpening-mask" class="px-6 py-3 text-black font-semibold text-md rounded-md shadow-md transition-transform transform hover:scale-105" style="background-color: springgreen;">Unsharpening mask</button>
-            <button onclick="sharpeningFunction()" id="sharpening" class="px-6 py-3 text-black font-semibold text-md rounded-md shadow-md transition-transform transform hover:scale-105" style="background-color: springgreen;">Sharpening</button>   
-          </div>
-        </div>
+      <div class="container-tools border-l-4 border-green-400 pl-4 shadow-lg rounded-lg max-h-[calc(100vh)] overflow-y-auto overflow-x-hidden scrollbar-hide">
 
-        <div class="odstranjevanje-kanalov">
-          <p>Odstranjevanje posameznih barvnih kanalov:</p>
-          <div class="sub-1">
-            <input
-              type="checkbox"
-              id="odstrani0"
-              onchange="odstraniBarvneKanale()"
-              value="red"
-            />
-            <label for="odstrani0">Red</label>
-            <br />
-          </div>
-          <div class="sub-2">
-            <input
-              type="checkbox"
-              id="odstrani1"
-              onchange="odstraniBarvneKanale()"
-              value="green"
-            />
-            <label for="odstrani1">Green</label>
-            <br />
-          </div>
-          <div class="sub-3">
-            <input
-              type="checkbox"
-              id="odstrani2"
-              onchange="odstraniBarvneKanale()"
-              value="blue"
-            />
-            <label for="odstrani2">Blue</label>
-          </div>
-        </div>
-        <div class="poudarjanje-kanalov">
-          <p>Poudarjanje posameznih barvnih kanalov:</p>
-          <div class="sub-1">
-            <input
-              type="checkbox"
-              id="poudari0"
-              onchange="poudariBarvneKanale()"
-              value="red"
-            />
-            <label for="poudari0">Red</label>
-            <br />
-          </div>
-          <div class="sub-2">
-            <input
-              type="checkbox"
-              id="poudari1"
-              onchange="poudariBarvneKanale()"
-              value="green"
-            />
-            <label for="poudari1">Green</label>
-            <br />
-          </div>
-          <div class="sub-3">
-            <input
-              type="checkbox"
-              id="poudari2"
-              onchange="poudariBarvneKanale()"
-              value="blue"
-            />
-            <label for="poudari2">Blue</label>
-          </div>
-        </div>
-        <div class="svetljenje">
-          <label for="svetlost">Spreminjanje svetlosti (0.01 - 5): </label>
-          <input
-            type="range"
-            id="svetlost"
-            value="1"
-            max="5"
-            min="0.01"
-            step="0.01"
-            oninput="spreminjanjeSvetlostiSlike()"
-            onchange="spreminjanjeSvetlostiSlike()"
-          />
-          <p id="vrednost">1</p>
-        </div>
-
-        <div class="sobel">
-          <p>Sobel operator:</p>
-          <div class="sub-1">
-            <input
-              type="radio"
-              onchange="sobelVertical()"
-              id="vertikala"
-              value="vertikala"
-              name="sobel"
-            />
-            <label for="vertikala">Sobel vertikale </label>
-            <br />
-          </div>
-          <div class="sub-2">
-            <input
-              type="radio"
-              onchange="sobelHorizontal()"
-              id="horizontala"
-              value="horizontala"
-              name="sobel"
-            />
-            <label for="horizontala">Sobel horizontale </label>
-            <br />
-          </div>
-          <div class="sub-3">
-            <input
-              type="radio"
-              onchange="sobelCombined()"
-              id="sobel-skupni"
-              value="sobel-skupni"
-              name="sobel"
-            />
-            <label for="sobel-skupni">Sobel vertikale in horizontale </label>
-          </div>
-        </div>
-
-        <div class="laplace">
-          <p>Laplace operator:</p>
-          <div class="sub-1">
-            <input
-              type="radio"
-              id="laplace1"
-              onchange="laplace1()"
-              value="1"
-              name="laplace"
-            />
-            <label for="laplace1">0 -1 0 -1 4 -1 0 -1 0</label>
-            <br />
-          </div>
-          <div class="sub-2">
-            <input
-              type="radio"
-              id="laplace2"
-              onchange="laplace2()"
-              value="2"
-              name="laplace"
-            />
-            <label for="laplace2">-1 -1 -1 -1 8 -1 -1 -1 -1</label>
-          </div>
-        </div>
-        <div class="histogram">
-          <p>Histogram:</p>
-          <div class="sub-1">
-            <label for="odsek">Vnesi št. odsekov: </label>
-            <input
-              type="number"
-              id="odsek"
-              value="5"
-              min="1"
-              max="255"
-              style="width: fit-content"
-            />
-            <br />
-          </div>
-          <div class="sub-2">
-            <input
-              type="radio"
-              id="barva0"
-              value="red"
-              name="histogram"
-              checked="checked"
-            />
-            <label for="barva0">Red</label>
-            <br />
-          </div>
-          <div class="sub-3">
-            <input type="radio" id="barva1" value="green" name="histogram" />
-            <label for="barva1">Green</label>
-            <br />
-          </div>
-          <div class="sub-4">
-            <input type="radio" id="barva2" value="blue" name="histogram" />
-            <label for="barva2">Blue</label>
-            <br />
-          </div>
-          <div class="sub-h5">
-            <button onclick="histrogram()" id="histogram">
-              Prikaži histogram
-            </button>
-          </div>
-        </div>
-        <button onclick="reset()" id="reset" class="px-6 py-3 text-white font-semibold text-md rounded-lg shadow-lg bg-red-600 hover:bg-red-700 transition-transform transform hover:scale-105">Reset</button>
+        <div class="w-full max-w-md space-y-6">
+            <div class="flex justify-center pt-4">
+              <input type="file" id="uploader" />
+            </div>
+            <div class="flex flex-col gap-2">
+                <div class="flex justify-between gap-2">
+                  <button onclick="sivenje()" id="sivenje" class="px-6 py-3 text-black font-semibold text-md rounded-md shadow-md transition-transform transform hover:scale-105" style="background-color: springgreen;">Sivenje</button>
+                  <button onclick="thresholding()" id="thresholding" class="px-6 py-3 text-black font-semibold text-md rounded-md shadow-md transition-transform transform hover:scale-105" style="background-color: springgreen;">Thresholding</button>
+                </div>
+                <div class="flex justify-between gap-2">
+                  <button onclick="boxBlur()" id="box-blur" class="px-6 py-3 text-black font-semibold text-md rounded-md shadow-md transition-transform transform hover:scale-105" style="background-color: springgreen;">Box blur</button>
+                  <button onclick="gaussianBlur()" id="gaussian-blur" class="px-6 py-3 text-black font-semibold text-md rounded-md shadow-md transition-transform transform hover:scale-105" style="background-color: springgreen;">Gaussian blur</button>
+                </div>
+                <div class="flex justify-between gap-2">
+                  <button onclick="unsharpeningMask()" id="unsharpening-mask" class="px-6 py-3 text-black font-semibold text-md rounded-md shadow-md transition-transform transform hover:scale-105" style="background-color: springgreen;">Unsharpening mask</button>
+                  <button onclick="sharpeningFunction()" id="sharpening" class="px-6 py-3 text-black font-semibold text-md rounded-md shadow-md transition-transform transform hover:scale-105" style="background-color: springgreen;">Sharpening</button>   
+                </div>
+            </div>
+            <div class="border-l-4 border-green-400 bg-black p-4 rounded-lg shadow-md">
+                <p class="text-lg font-semibold mb-3">Odstranjevanje posameznih barvnih kanalov:</p>
+                <div class="flex items-center gap-6">
+                    <div class="flex items-center gap-2">
+                        <input type="checkbox" id="odstrani0" onchange="odstraniBarvneKanale()" value="red"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <label for="odstrani0" class="text-md">Red</label>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <input type="checkbox" id="odstrani1" onchange="odstraniBarvneKanale()" value="green"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <label for="odstrani1" class="text-md">Green</label>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <input type="checkbox" id="odstrani2" onchange="odstraniBarvneKanale()" value="blue"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <label for="odstrani2" class="text-md">Blue</label>
+                    </div>
+                </div>
+            </div>
+            <div class="border-l-4 border-green-400 bg-black p-4 rounded-lg shadow-md">
+                <p class="text-lg font-semibold mb-3">Poudarjanje posameznih barvnih kanalov:</p>
+                <div class="flex items-center gap-6">
+                    <div class="flex items-center gap-2">
+                        <input type="checkbox" id="poudari0" onchange="poudariBarvneKanale()" value="red"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <label for="poudari0" class="text-md">Red</label>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <input type="checkbox" id="poudari1" onchange="poudariBarvneKanale()" value="green"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <label for="poudari1" class="text-md">Green</label>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <input type="checkbox" id="poudari2" onchange="poudariBarvneKanale()" value="blue"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <label for="poudari2" class="text-md">Blue</label>
+                    </div>
+                </div>
+            </div>
+            <div class="border-l-4 border-green-400 bg-black p-4 rounded-lg shadow-md">
+                <p class="text-lg font-semibold mb-3">Svetlost:</p>
+                <div class="flex items-center gap-4 mb-3">
+                    <label for="svetlost" class="text-md">Spreminjanje svetlosti (0.01 - 5):</label>
+                </div>
+                <div class="flex items-center gap-4">
+                    <input type="range" id="svetlost" value="1" min="0.01" max="5" step="0.01"
+                        oninput="spreminjanjeSvetlostiSlike()"
+                        onchange="spreminjanjeSvetlostiSlike()"
+                        class="w-full cursor-pointer accent-green-400">
+                    <p id="vrednost" class="text-md font-semibold">1</p>
+                </div>
+            </div>
+            <div class="border-l-4 border-green-400 bg-black p-4 rounded-lg shadow-md">
+                <p class="text-lg font-semibold mb-3">Sobel Operator:</p>
+                <div class="flex items-center gap-6">
+                    <label class="flex items-center gap-2 cursor-pointer">
+                        <input type="radio" id="vertikala" onchange="sobelVertical()" value="vertikala" name="sobel"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <span class="text-md">Vertical</span>
+                    </label>
+                    <label class="flex items-center gap-2 cursor-pointer">
+                        <input type="radio" id="horizontala" onchange="sobelHorizontal()" value="horizontala" name="sobel"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <span class="text-md">Horizontal</span>
+                    </label>
+                    <label class="flex items-center gap-2 cursor-pointer">
+                        <input type="radio" id="sobel-skupni" onchange="sobelCombined()" value="sobel-skupni" name="sobel"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <span class="text-md">Combined</span>
+                    </label>
+                </div>
+            </div>
+            <div class="border-l-4 border-green-400 bg-black p-4 rounded-lg shadow-md">
+                <p class="text-lg font-semibold mb-3">Laplace Operator:</p>
+                <div class="space-y-2">
+                    <label class="flex items-center gap-2 cursor-pointer">
+                        <input type="radio" id="laplace1" onchange="laplace1()" value="1" name="laplace"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <span class="text-md font-mono">0 -1 0  |  -1 4 -1  |  0 -1 0</span>
+                    </label>
+                    <label class="flex items-center gap-2 cursor-pointer">
+                        <input type="radio" id="laplace2" onchange="laplace2()" value="2" name="laplace"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <span class="text-md font-mono">-1 -1 -1  |  -1 8 -1  |  -1 -1 -1</span>
+                    </label>
+                </div>
+            </div>
+            <div class="border-l-4 border-green-400 bg-black p-4 rounded-lg shadow-md">
+                <p class="text-lg font-semibold mb-3">Histogram:</p>
+                <div class="flex items-center gap-4 mb-3">
+                    <label for="odsek" class="text-md">Št. odsekov:</label>
+                    <input type="number" id="odsek" value="5" min="1" max="255"
+                        class="w-16 text-center p-1 rounded bg-gray-800 border border-green-400 focus:ring-2 focus:ring-green-500 outline-none">
+                </div>
+                <div class="flex justify-start gap-4">
+                    <label class="flex items-center gap-2 cursor-pointer">
+                        <input type="radio" id="barva0" value="red" name="histogram" checked
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <span class="text-md">Red</span>
+                    </label>
+                    <label class="flex items-center gap-2 cursor-pointer">
+                        <input type="radio" id="barva1" value="green" name="histogram"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <span class="text-md">Green</span>
+                    </label>
+                    <label class="flex items-center gap-2 cursor-pointer">
+                        <input type="radio" id="barva2" value="blue" name="histogram"
+                            class="w-5 h-5 accent-green-400 cursor-pointer">
+                        <span class="text-md">Blue</span>
+                    </label>
+                </div>
+                <div class="mt-4 text-center">
+                    <button onclick="histogram()" id="histogram"
+                        class="px-4 py-2 bg-green-600 hover:bg-green-500 rounded-lg shadow-md transition">
+                        Prikaži Histogram
+                    </button>
+                </div>
+            </div>
+            <div class="flex justify-center pb-4">
+              <button onclick="reset()" class="px-6 py-3 text-white font-semibold text-md rounded-lg shadow-lg bg-red-600 hover:bg-red-700 transition-transform transform hover:scale-105">Reset</button>
+            </div>
+      </div>
       </div>
     </div>
+
     <div class="toolbar">
       <img src="./src/save-icon.png" id="save-button" alt="" onclick="save()" />
       <img src="./src/undo-icon.png" id="undo-button" alt="" />
