--- a/html.html
+++ b/html.html
@@ -145,7 +145,7 @@
                     </label>
                 </div>
                 <div class="mt-4 text-center">
-                    <button onclick="histogram()" id="histogram"
+                    <button onclick="histrogram()" id="histogram"
                         class="px-4 py-2 bg-green-600 hover:bg-green-500 rounded-lg shadow-md transition">
                         Prikaži Histogram
                     </button>
